# sdk

common/: Cargo.toml
common/src/: cursor.rs  lib.rs  main.rs
common/src/errors/: collector.rs  compiler.rs  mod.rs  scanner.rs  severity.rs
parser/: Cargo.toml
parser/src/: lib.rs  main.rs  parse.rs  statements.rs
parser/src/parse/: mod.rs  whitespace_remover.rs
scanner/: Cargo.toml
scanner/src/: lib.rs  main.rs  scan.rs  token.rs
