[package]
name = "m68k_reloaded_parser"
version = "0.1.0"
authors = ["Marcel Garus <marcel.garus@gmail.com>", "Jonas Wanke <contact@jonas-wanke.com>"]
edition = "2018"

[lib]
name = "m68k_reloaded_parser"
path = "src/lib.rs"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
m68k_reloaded_common = { path = "../common" }
m68k_reloaded_scanner = { path = "../scanner" }
